--- a/data/popup-dialog.ui
+++ b/data/popup-dialog.ui
@@ -33,7 +33,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="label12">
+              <object class="GtkLabel" id="username_label">
                 <property name="visible">True</property>
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">_Username:</property>
@@ -141,15 +141,5 @@
       <!-- column-name OnlineService -->
       <column type="gpointer"/>
     </columns>
-    <data>
-      <row>
-        <col id="0" translatable="yes">twitter.com</col>
-        <col id="1"/>
-      </row>
-      <row>
-        <col id="0" translatable="yes">identi.ca</col>
-        <col id="1"/>
-      </row>
-    </data>
   </object>
 </interface>
