--- a/data/services-dialog.ui
+++ b/data/services-dialog.ui
@@ -16,7 +16,7 @@
           <object class="GtkTable" id="account_table">
             <property name="visible">True</property>
             <property name="border_width">6</property>
-            <property name="n_rows">6</property>
+            <property name="n_rows">7</property>
             <property name="n_columns">2</property>
             <property name="column_spacing">12</property>
             <property name="row_spacing">12</property>
@@ -30,8 +30,8 @@
               <packing>
                 <property name="left_attach">1</property>
                 <property name="right_attach">2</property>
-                <property name="top_attach">3</property>
-                <property name="bottom_attach">4</property>
+                <property name="top_attach">4</property>
+                <property name="bottom_attach">5</property>
                 <property name="y_options"></property>
               </packing>
             </child>
@@ -44,8 +44,8 @@
               <packing>
                 <property name="left_attach">1</property>
                 <property name="right_attach">2</property>
-                <property name="top_attach">2</property>
-                <property name="bottom_attach">3</property>
+                <property name="top_attach">3</property>
+                <property name="bottom_attach">4</property>
                 <property name="y_options"></property>
               </packing>
             </child>
@@ -57,8 +57,8 @@
                 <property name="mnemonic_widget">password_entry</property>
               </object>
               <packing>
-                <property name="top_attach">3</property>
-                <property name="bottom_attach">4</property>
+                <property name="top_attach">4</property>
+                <property name="bottom_attach">5</property>
                 <property name="x_options"></property>
                 <property name="y_options"></property>
               </packing>
@@ -71,8 +71,8 @@
                 <property name="mnemonic_widget">username_entry</property>
               </object>
               <packing>
-                <property name="top_attach">2</property>
-                <property name="bottom_attach">3</property>
+                <property name="top_attach">3</property>
+                <property name="bottom_attach">4</property>
                 <property name="x_options"></property>
                 <property name="y_options"></property>
               </packing>
@@ -88,8 +88,8 @@
               </object>
               <packing>
                 <property name="right_attach">2</property>
-                <property name="top_attach">4</property>
-                <property name="bottom_attach">5</property>
+                <property name="top_attach">5</property>
+                <property name="bottom_attach">6</property>
                 <property name="x_options">GTK_FILL</property>
                 <property name="y_options"></property>
               </packing>
@@ -99,6 +99,7 @@
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">_Service:	</property>
                 <property name="use_underline">True</property>
+                <property name="mnemonic_widget">urls</property>
               </object>
               <packing>
                 <property name="top_attach">1</property>
@@ -110,7 +111,7 @@
             <child>
               <object class="GtkComboBoxEntry" id="urls">
                 <property name="visible">True</property>
-                <property name="model">urls_list</property>
+                <property name="model">urls_liststore</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -122,7 +123,7 @@
             </child>
             <child>
               <object class="GtkCheckButton" id="autoconnect_checkbutton">
-                <property name="label" translatable="yes">Connect _automatically</property>
+                <property name="label" translatable="yes">Connect automatically on _start-up.</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
@@ -131,8 +132,8 @@
               </object>
               <packing>
                 <property name="right_attach">2</property>
-                <property name="top_attach">5</property>
-                <property name="bottom_attach">6</property>
+                <property name="top_attach">6</property>
+                <property name="bottom_attach">7</property>
               </packing>
             </child>
             <child>
@@ -146,6 +147,38 @@
               </object>
               <packing>
                 <property name="right_attach">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="service_type_label">
+                <property name="sensitive">False</property>
+                <property name="label" translatable="yes">_Type of service</property>
+                <property name="use_underline">True</property>
+              </object>
+              <packing>
+                <property name="top_attach">2</property>
+                <property name="bottom_attach">3</property>
+                <property name="x_options"></property>
+                <property name="y_options"></property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkComboBox" id="service_type_combobox">
+                <property name="sensitive">False</property>
+                <property name="model">service_type_liststore</property>
+                <property name="active">0</property>
+                <child>
+                  <object class="GtkCellRendererText" id="service_type_cellrenderertext"/>
+                  <attributes>
+                    <attribute name="text">0</attribute>
+                  </attributes>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="right_attach">2</property>
+                <property name="top_attach">2</property>
+                <property name="bottom_attach">3</property>
               </packing>
             </child>
           </object>
@@ -216,12 +249,26 @@
       <action-widget response="0">apply_button</action-widget>
     </action-widgets>
   </object>
-  <object class="GtkListStore" id="urls_list">
+  <object class="GtkListStore" id="urls_liststore">
     <columns>
       <!-- column-name url -->
       <column type="gchararray"/>
       <!-- column-name OnlineService -->
       <column type="gpointer"/>
     </columns>
+  </object>
+  <object class="GtkListStore" id="service_type_liststore">
+    <columns>
+      <!-- column-name service_type -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">Twitter.com</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Laconica</col>
+      </row>
+    </data>
   </object>
 </interface>
