get2gnow 000.000.DB3.aEC9: sorted tweet view, URLs page titles displayed in links, and more work on multiple account support.
I've worked a lil on polishing up get2gnow's multiple accounts.  I still need to improve my friends manager & direct messaging.  I need to implement some form of caching for service responses so friends & followers are loaded per service & not for all services.

I've finally implemented sorting of tweet's in get2gnow's timeline.  It automatically sorts each timeline by the date & time when the tweet is posted/created.

I've also extended my SexyLabel interface so when tweets are displayed url's are parsed so the page's title is displayed instead of just the url.  I want to extend this to get2gnow's timelines but for now it only does this when a tweet's selected.  There's a slight pause while the network connection gets the page's title.  I really want to make this more efficiant, when I can figure out a way.  It is a prefernce that can be changed so tweets are display quicker.

I've started working on my caching interface for xml files so only new friends, followers, tweets, & etc have to be downloaded.  I have to take into account the services name & create a path from it.  Adding a caching interface shouldn't take to much time.

I also fully enabled splitting get2gnow's TweetView off into its own window or as an embed portion of the main window.

I've also tweak several other UI & multiple accounts support.  I need to finish my caching interface & debugging of get2gnow's multiple account support.  At least now that tweet's are sorting correctly I'll be able to keep up with any feedback & conversations.  So I can finally actually communicate again.

Committed on: 2009-05-12 @ 01:58:15 AM

--- a/data/main-window.ui
+++ b/data/main-window.ui
@@ -15,10 +15,10 @@
     </columns>
   </object>
   <object class="GtkWindow" id="main_window">
-    <property name="width_request">700</property>
-    <property name="height_request">700</property>
     <property name="visible">True</property>
     <property name="title" translatable="yes">get2gnow</property>
+    <property name="default_width">700</property>
+    <property name="default_height">700</property>
     <accel-groups>
       <group name="accelgroup1"/>
     </accel-groups>
@@ -130,8 +130,8 @@
                         <property name="use_underline">True</property>
                         <property name="image">image10</property>
                         <property name="use_stock">False</property>
-                        <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                         <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                       </object>
                     </child>
                     <child>
