get2gnow 000.000.DB5.aEE9: improved account management, further caching support, & refactored window size & postition saving.
I've continued to work on get2gnow's support for multiple accounts.  *NOTE* for Laconica instances *do not* add the '/api' uri suffix.

I'm still working on following, unfollowing, & block throught the menu popups.  I hope to finish my multiple account support tomorrow.  I slept in extremely late this morning after being sick last night.

I'm still working on adding caching support for tweets, friends lists & uri titles.

My biggest improvement of today is that I've implemented how get2gnow saves & restores window(s) position & size.  It now supports separate window sizes for all of get2gnow's possible views: embed & split view.  In split view get2gnow's TweetView area is separted from get2gnow's from its main window.  Now all three windows can be moved & resized indipendantly & each window & view will be remember indipentanly.  I've also extended get2gnow's geometry management so it will be very easy to expand it to support other windows. I'll be extending this to support get2gnow's friend's manager & other windows, basically all of them.

As I add polish to any part of get2gnow I'm refactorring it to make it as extensible as possible.  One of my biggest goals for v2 will be plug-in suppor, especially for online sites with REST RESOURCES.  That was some could add a plug-in for mugshot or other social networks, hopefully more ones that are much more free, as in freedom.  Even Identi.ca is far from free when it comes to user data.  But that any project, well a movement, & one I'll be working on a lot - one I'll be making my life's focus.  An information economy is awesome, so long as you still own you, & right now online services, social networks, & cloud computing are creating user & data lock-in, they're taking owner ship, & they're even adding ~features~ that make data access more complicated for users & programmers a like.  Its something I

--- a/data/preferences.ui
+++ b/data/preferences.ui
@@ -35,6 +35,89 @@
                             <property name="visible">True</property>
                             <property name="spacing">6</property>
                             <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <object class="GtkCheckButton" id="no_alert_checkbutton">
+                                <property name="label" translatable="yes">Do not _alert me when my Tweets are to long.</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="use_underline">True</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="position">2</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkCheckButton" id="use_tweet_dialog_checkbutton">
+                                <property name="label" translatable="yes">Compose Tweets in a separate _window.</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="use_underline">True</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="position">3</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child type="label">
+                      <object class="GtkLabel" id="label6">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">&lt;b&gt;General&lt;/b&gt;</property>
+                        <property name="use_markup">True</property>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <placeholder/>
+                </child>
+              </object>
+            </child>
+            <child type="tab">
+              <object class="GtkLabel" id="general_label">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">_General</property>
+                <property name="use_underline">True</property>
+              </object>
+              <packing>
+                <property name="tab_fill">False</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkVBox" id="vbox1">
+                <property name="visible">True</property>
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkFrame" id="frame1">
+                    <property name="visible">True</property>
+                    <property name="label_xalign">0</property>
+                    <property name="shadow_type">none</property>
+                    <child>
+                      <object class="GtkAlignment" id="alignment1">
+                        <property name="visible">True</property>
+                        <property name="left_padding">12</property>
+                        <child>
+                          <object class="GtkVBox" id="vbox2">
+                            <property name="visible">True</property>
+                            <property name="orientation">vertical</property>
+                            <child>
                               <object class="GtkCheckButton" id="notify_checkbutton">
                                 <property name="label" translatable="yes">Display _notifications when message recieved</property>
                                 <property name="visible">True</property>
@@ -65,53 +148,18 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkCheckButton" id="no_alert_checkbutton">
-                                <property name="label" translatable="yes">Do not _alert me when my Tweets are to long.</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="receives_default">False</property>
-                                <property name="use_underline">True</property>
-                                <property name="draw_indicator">True</property>
-                              </object>
-                              <packing>
-                                <property name="position">2</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <object class="GtkCheckButton" id="use_tweet_dialog_checkbutton">
-                                <property name="label" translatable="yes">Compose Tweets in a separate _window.</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="receives_default">False</property>
-                                <property name="use_underline">True</property>
-                                <property name="draw_indicator">True</property>
-                              </object>
-                              <packing>
-                                <property name="position">3</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <object class="GtkCheckButton" id="dont_expand_urls_checkbutton">
-                                <property name="label" translatable="yes">Don't expand _URLs to include page titles.</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="receives_default">False</property>
-                                <property name="use_underline">True</property>
-                                <property name="draw_indicator">True</property>
-                              </object>
-                              <packing>
-                                <property name="position">4</property>
-                              </packing>
+                              <placeholder/>
                             </child>
                           </object>
                         </child>
                       </object>
                     </child>
                     <child type="label">
-                      <object class="GtkLabel" id="label6">
+                      <object class="GtkLabel" id="new_tweet_frame_label">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">&lt;b&gt;General&lt;/b&gt;</property>
+                        <property name="label" translatable="yes">&lt;b&gt;When tweets are _recieved&lt;/b&gt;</property>
                         <property name="use_markup">True</property>
+                        <property name="use_underline">True</property>
                       </object>
                     </child>
                   </object>
@@ -119,6 +167,29 @@
                     <property name="position">0</property>
                   </packing>
                 </child>
+                <child>
+                  <placeholder/>
+                </child>
+              </object>
+              <packing>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child type="tab">
+              <object class="GtkLabel" id="alerts_tab_label">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">_Alerts</property>
+                <property name="use_underline">True</property>
+              </object>
+              <packing>
+                <property name="position">1</property>
+                <property name="tab_fill">False</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkVBox" id="vbox3">
+                <property name="visible">True</property>
+                <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkFrame" id="frame4">
                     <property name="visible">True</property>
@@ -199,26 +270,83 @@
                     </child>
                   </object>
                   <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkFrame" id="frame2">
+                    <property name="visible">True</property>
+                    <property name="label_xalign">0</property>
+                    <property name="shadow_type">none</property>
+                    <child>
+                      <object class="GtkAlignment" id="alignment2">
+                        <property name="visible">True</property>
+                        <property name="left_padding">12</property>
+                        <child>
+                          <object class="GtkVBox" id="vbox6">
+                            <property name="visible">True</property>
+                            <property name="orientation">vertical</property>
+                            <child>
+                              <object class="GtkCheckButton" id="expand_urls_disabled_checkbutton">
+                                <property name="label" translatable="yes">Don't expand _URLs to include page titles.</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="use_underline">True</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkCheckButton" id="expand_urls_selected_only_checkbutton">
+                                <property name="label" translatable="yes">Only expand URL titles when a Tweet's selected.</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child type="label">
+                      <object class="GtkLabel" id="url_expand_framee_label">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">&lt;b&gt;Viewing Tweets&lt;/b&gt;</property>
+                        <property name="use_markup">True</property>
+                        <property name="use_underline">True</property>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
                     <property name="position">1</property>
                   </packing>
                 </child>
               </object>
+              <packing>
+                <property name="position">2</property>
+              </packing>
             </child>
             <child type="tab">
-              <object class="GtkLabel" id="general_label">
+              <object class="GtkLabel" id="timeline_tab_label">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_General</property>
+                <property name="label" translatable="yes">_Tweets</property>
                 <property name="use_underline">True</property>
               </object>
               <packing>
+                <property name="position">2</property>
                 <property name="tab_fill">False</property>
               </packing>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child type="tab">
-              <placeholder/>
             </child>
           </object>
           <packing>
